# UAELicensePlateRecognition

./: .gitignore  README.md  config.yaml  process_dataset.py  pyproject.toml  requirements.txt  train.py  visualize_predictions.py
configs/data/: dataset.yaml
configs/export/: onnx.yaml  tensorrt.yaml
configs/model/: pp_picodet_s.yaml  rtdetr_tiny.yaml  yolov10n.yaml  yolov5n.yaml  yolov8n.yaml
configs/quantization/: ptq.yaml  qat.yaml
configs/training/: default.yaml
docs/: architecture.md  data_pipeline.md  quantization.md
modules/: __init__.py  data.py  losses.py  metrics.py  modeling.py  quantization.py  utils.py
scripts/: calibrate_int8.py  evaluate.py  export_onnx.py  train.py
src/uaelp_det/: __init__.py  utils.py
src/uaelp_det/data/: __init__.py  collate.py  datasets.py  transforms.py
src/uaelp_det/models/: __init__.py  registry.py
src/uaelp_det/quantization/: __init__.py  calibration.py  export.py  qat.py
src/uaelp_det/training/: __init__.py  hooks.py  losses.py  metrics.py  trainer.py
tests/unit/: test_config_loading.py
